[package]
name = "audiorust"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"
description = "A library of audio processing tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fft-convolver = "0.2.0"
hound = "3.5.1"
ndarray = "0.15.6"
num = "0.4.3"
pitch-detection = "0.3.0"
pyin = "1.0.2"
rand = "0.8.5"
rustfft = "6.2.0"
symphonia = "0.5.4"
